<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fullsail.android.safetravels.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/activity_main" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.fullsail.android.safetravels.fragments.FriendsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/navigation_new_post"
        android:name="com.fullsail.android.safetravels.fragments.NewPostFragment"
        android:label="@string/title_new_post"
        tools:layout="@layout/fragment_new_post" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.fullsail.android.safetravels.fragments.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.fullsail.android.safetravels.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>