<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:contentDescription="@string/prompt_profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/upload_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/action_upload_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_iv" />

    <Button
        android:id="@+id/sign_up_bttn"
        style="@style/BttnStyle"
        android:layout_marginStart="104dp"
        android:text="@string/action_register"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteY="665dp" />

    <TextView
        android:id="@+id/signIn_TV"
        style="@style/Button_TV_Style"
        android:layout_width="47dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="124dp"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/action_sign_in_short"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sign_up_bttn"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>