<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="169dp"
        android:layout_height="152dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_picture_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/prompt_profile_image" />
    </FrameLayout>

    <Button
        android:id="@+id/upload_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_upload_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <TextView
        android:id="@+id/label_first_name"
        style="@style/Title_TV_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/prompt_first_name"
        app:layout_constraintEnd_toStartOf="@+id/first_name_etv"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_bttn"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/first_name_etv"
        style="@style/ETV_Style"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/prompt_first_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_first_name"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/label_last_name"
        style="@style/Title_TV_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/prompt_last_name"
        app:layout_constraintEnd_toStartOf="@+id/last_name_etv"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_first_name"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/last_name_etv"
        style="@style/ETV_Style"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/prompt_last_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_etv"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/label_username"
        style="@style/Title_TV_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/prompt_username"
        app:layout_constraintEnd_toStartOf="@+id/username_etv"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_last_name"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/username_etv"
        style="@style/ETV_Style"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_etv"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/email_register_label"
        style="@style/Title_TV_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/prompt_email"
        app:layout_constraintEnd_toStartOf="@+id/email_register_etv"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_username"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/email_register_etv"
        style="@style/ETV_Style"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_etv"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/password_register_label"
        style="@style/Title_TV_Style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/prompt_password"
        app:layout_constraintEnd_toStartOf="@+id/password_register_etv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_register_label"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/password_register_etv"
        style="@style/ETV_Style"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#546E7A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_register_etv"
        tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/signIn_TV"
        style="@style/Button_TV_Style"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="72dp"
        android:clickable="true"
        android:focusable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/action_sign_in_short"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_register_label"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/sign_up_bttn"
        style="@style/BttnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="124dp"
        android:text="@string/action_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signIn_TV"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>